mainPage/style.css
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@600&display=swap');

body,html {
    height: 100%;
}

#logo{
    padding-top: 20px;
}

#export-html-container{

    background-color: whitesmoke;
    border: 1px solid #d7d7d7;
    text-align: right;
}

#sidebar {
    position: absolute;
    width: 380px;
    top: 11%;
    min-height: 120%;
    left: 0px;
    background: #ffffff;
    border: 1px solid #d7d7d7;
    background-color: whitesmoke;
}

#buttons-container {
    margin-bottom: 150px;
}

#canvas{
    position: absolute;
    left: 388px;
    width: calc(100% - 388px);
    top: 11%;
    min-height: 120%;
    background-color:whitesmoke;
}

#add-title-bar {
    font-size: 12px;
    margin-left: 20px;
    margin-top: 10px;
}

#title-bar,#personalize-title-bar{
    margin-left: 20px;
    margin-top: 10px;
    border-bottom: 1px solid rgba(0, 0, 0, 0.23);
}

#indicate-button-click-text{
    position: absolute;
    top: 30px;
    left: 300px;
    color: black;
    font-family: 'Inter', sans-serif;
}

hr.solidTop {
    position: absolute;
    border-top: 3px solid rgb(0, 0, 0);
    top: 26px;
    left: 3px;
    right: 5px;
    margin-left: 20px;
    padding-bottom: 20px;
}

hr.solid {
    border-top: 3px solid rgb(187, 187, 187);
}


#add-image-button,#add-navbar-button,#add-text-button,
#add-form-button {
    display: inline-block;
    vertical-align: middle;
    text-align: center;
    background: #F5F5F5;
    line-height: 60px;
    height: 60px;
    width: 60px;
    border: 0.5px solid #000000;
    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.05);
    border-radius: 8px;
    margin-bottom: 20px;
    margin-right: 10px;
    margin-left: 20px;
    font-family: 'Inter', sans-serif;
    color: black;

}

#indicate-personalize-text{
    position: absolute;
    top: 320px;
    left: 300px;
    color: black;
    font-family: 'Inter', sans-serif;
}

#color-picker-text{
    font-family: 'Inter', sans-serif;
    color: #444444;
    font-size: 11px;
}


/**
#add-image-button,#add-navbar-button {
    background-color: yellowgreen;
    height: 50px;
    width: 50px;
    border: 1px solid black;

}
**

